[package]
name = "blackbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lib0 = { version = "^0.16", features = ["lib0-serde"] }
yrs = "^0.16"
y-sync = { version = "^0.3", features = ["net"] }
warp = "^0.3"
futures-util = { version = "0.3", features = ["sink"] }
# tokio = { version = "^1.27", features = ["rt", "net", "sync", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0"
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
tower-http = { version = "0.4.0", features = ["cors", "trace"] } # added
headers = "0.3"

log = "0.4"
url = "2.3.1"

axum = { version = "0.6.20", features = ["ws", "headers", "tokio", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0.38"
dotenv = "0.15.0"
tokio-tungstenite = "0.18"


[dev-dependencies]
tokio-tungstenite = "0.18"
tokio = { version = "1", features = ["full"] }
